[package]
name = "influxdb_client_rust"
version = "1.0.0-alpha"
authors = ["Jakub Bednar <jakub.bednar@gmail.com>"]
edition = "2018"
description = "InfluxDB (v2+) Client Library for Rust"
keywords = ["influxdb",  "influxdata",  "flux",  "rust", "timeseries"]
homepage = "https://github.com/bonitoo-io/influxdb-client-rust"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/influxdb_client_rust/"
repository = "https://github.com/bonitoo-io/influxdb-client-rust"

[dependencies]
serde = { version = "^1.0.114", features = ["derive"] }
reqwest = { version = "^0.10.6", features = ["json"] }
